<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">航频卫士</string>
    <string name="kn_start_copyright_2">All Rights Reserved.</string>
    <string name="kn_start_copyright">Copyright© 2015 .航频之声.</string>
    <string name="hello_world">Version 1.0</string>
    <string name="apkurl">"http://192.168.20.87/updata.html"</string>
    <string name="action_settings">Settings</string>
    <string name="hpuvoice">航频卫士</string>
    <string name="isdesc">isdesc</string>
    <string name="yijiantijian">一键体验</string>
    <string name="tips">建议进行一键体检\n了解手机是否健康</string>
    <string name="name_for_modle">name for moudle</string>
    <string name="set1">欢迎使用手机防盗功能</string>
    <string name="set2">你的手机防盗卫士:</string>
    <string name="set3">sim卡变更报警</string>
    <string name="set4">GPS追踪</string>
    <string name="set5">远程数据销毁</string>
    <string name="set6">远程锁屏</string>
    <string name="shoujifangdao">手机防盗</string>
    <string name="safenum">安全号码</string>
    <string name="xxxx">XXXX</string>
    <string name="openstate">防盗保护是否开启</string>
    <string name="resetting">重新进入设置向导页面</string>
    <string name="introduce">功能简介</string>
    <string name="gps">GPS追踪:#location#</string>
    <string name="music">播放报警音乐:#alarm#</string>
    <string name="wipedata">远程删除数据:#wipedata#</string>
    <string name="closescreen">远程锁屏:#lockscreen#</string>
    <string name="help">帮助</string>
    <string name="shoujikabangding">手机卡绑定</string>
    <string name="tepss">通过绑定sim卡：\n下次重启手机如果发现sim卡变化\n就会发送报警短信</string>
    <string name="_3_">3.设置安全号码</string>
    <string name="_">请输入安全号码</string>
    <string name="lainxiren">选择联系人</string>
    <string name="sim_n_">sim卡变更后：\n报警短信会发给安全号码</string>
    <string name="name">姓名</string>
    <string name="num">电话号码</string>
    <string name="selectnum">选择联系人</string>
    <string name="notpro">当前状态：手机防盗保护没有开启</string>
    <string name="condone">恭喜您,设置完成</string>
    <string name="alldone">设置完成</string>
    <string name="sample_device_admin_description">超级设备管理员，获取手机超级权限，拥有吊炸天的功能.</string>
    <string name="sample_device_admin">SuperAdmin</string>
    <string name="loginnow">立即登录</string>
    <string name="setcenter">设置中心</string>
    <string name="inputpwd">输入密码</string>
    <string name="querenmima">确认密码</string>
    <string name="queing">确定</string>
    <string name="quxiao">取消</string>
    <string name="demotext">病毒查杀</string>
    <string name="demotext2">全面查杀病毒木马.恶意软件</string>
    <string name="setitem">setitem</string>
    <string name="heighttools">高级工具</string>
    <string name="shuruhaoma">输入查询号码</string>
    <string name="query">查询</string>
    <string name="qingshuruhaoma">请输入查询号码</string>
    <string name="chinatowel">中国铁塔</string>
    <string name="locationtips">按住提示框拖拽到任何位置\n按手机返回键立即生效</string>
    <string name="Communication">通信卫士</string>
    <string name="_1234556788">1234556788</string>
    <string name="publicfuwu">公共服务</string>
    <string name="addblcaknum">添加黑名单</string>
    <string name="inputblcaknumber">输入黑名单号码</string>
    <string name="dingcandianhau">订餐电话</string>
    <string name="gongongfuwu">公共服务</string>
    <string name="yunyingshang">运营商</string>
    <string name="kuaidifuwu">快递服务</string>
    <string name="jipiaojiuidna">机票酒店</string>
    <string name="yinhangzhengjusna">银行证券</string>
    <string name="baoxianfuwu">保险服务</string>
    <string name="pinpaifuwu">品牌售后</string>
    <string name="putblackname">输入黑名单名字</string>
    <string name="appmanger">软件管理</string>
    <string name="shoujiweishi">手机卫士</string>
    <string name="shoujineicun">手机内存</string>
    <string name="_2_13">2.13</string>
    <string name="tv_app_uninstall2">卸载</string>
    <string name="tv_app_start23">启动</string>
    <string name="tv_app_shares">分享</string>
    <string name="tv_app_details">详细</string>
    <string name="taskmanger">进程管理</string>
    <string name="quanxuan">全选</string>
    <string name="qingli">清理</string>
    <string name="shezhi">切换</string>
    <string name="running_app_5">Running App:5</string>
    <string name="avaliable_ram_441_30m">Available RAM:441.30M</string>
    <string name="yijianiqngli">一键清理</string>
    <string name="password">password</string>
    <string name="lock_app">LOCK APP</string>
    <string name="chengxusuo">程序锁</string>
    <string name="jiesuoanniu">解锁</string>
    <string name="liuliangjiankong">流量监控</string>
    <string name="tongxinghuajinakong">图形化流量监控，剖析每款应用</string>
    <string name="shoujishadu">手机杀毒</string>
    <string name="shenduchasha">深度 查杀</string>
    <string name="quanmianchashatips">全面扫描手机，木马清道夫,\n恶意软件的天敌，云查杀护航.</string>
    <string name="huancunqingli">缓存清理</string>
    <string name="appclear">APP清理</string>
    <string name="sdclear">SD卡清理</string>
    <string name="about">关于</string>
    <string name="login">登陆</string>
    <string name="contactus">联系我们</string>
    <string name="apphuancunqingli">App缓存清理</string>
    <string name="yinqingqingli">-16核引擎扫描-</string>
    <string name="_2kb">2kb</string>
    <string name="yijianqingli">一键清理</string>
    <string name="appcache_">AppCache清道夫</string>
    <string name="NewGame">New Game</string>
    <string name="Scores">Scores</string>
    <string name="ExitGame">Exit Game</string>
    <string name="Return">Return</string>
    <string name="FeiJiScore">飞机大战分数</string>
    <string name="FeiJiScoreList">飞机大战分数排行榜</string>

    <color name="black">#ff000000</color>
    <color name="gray">#7B797B</color>

</resources>