<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#B6BCCC"
     >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/set1"
        android:gravity="center"
        android:background="#000000"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    
    <TextView 
        style="@style/text_content_style"
        android:text="@string/set2"
        />
    <TextView 
        style="@style/text_content_style"
        android:drawableLeft="@drawable/abc_ic_search"
        android:text="@string/set3"
        />
    <TextView 
        style="@style/text_content_style"
        android:drawableLeft="@drawable/abc_ic_search"
        android:text="@string/set4"
        />
    <TextView 
        style="@style/text_content_style"
        android:drawableLeft="@drawable/abc_ic_search"
        android:text="@string/set5"
        />
    <TextView 
        style="@style/text_content_style"
        android:drawableLeft="@drawable/abc_ic_search"
        android:text="@string/set6"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:contentDescription="@string/isdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_online" />

        <ImageView
            android:contentDescription="@string/isdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible" />

        <ImageView
            android:contentDescription="@string/isdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible" />

        <ImageView
            android:contentDescription="@string/isdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:contentDescription="@string/isdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/show_cat_1" />

        <Button
            style="@style/next_button_style"
           />
    </RelativeLayout>
    
</LinearLayout>
