<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center_horizontal"
    android:background="#ff181818">
      <ImageView 
          android:contentDescription="@string/isdesc"
          android:layout_width="45dp"
          android:layout_height="40dp"
          android:src="@drawable/login_logo"
          android:layout_gravity="center_horizontal"
          />

      <EditText
          android:drawableLeft="@drawable/regist_emo"
          android:textColor="#000000"
          android:id="@+id/et_password"
          android:layout_width="280dp"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="textPassword" 
          android:hint="@string/inputpwd">

      </EditText>

      <EditText
          android:drawableLeft="@drawable/regist_emo"
          android:textColor="#000000"
          android:id="@+id/et_password_confirm"
          android:layout_width="280dp"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="textPassword" 
          android:hint="@string/querenmima"/>
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <Button 
	         android:textColor="#000000"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:id="@+id/btn_ok"
	        android:layout_weight="1"
	        android:text="@string/queing"/>
	    <Button
	         android:textColor="#000000"
	        android:layout_weight="1"
	         android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:id="@+id/btn_cancel"
	        android:text="@string/quxiao"/>
	    
	</LinearLayout>
</LinearLayout>