<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dip"
    android:background="@color/background"
    android:orientation="horizontal" >

    <ImageView
        android:contentDescription="@string/isdesc"
        android:id="@+id/iv_main_below"
        android:layout_width="60dip"
        android:layout_height="50dip"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_main_below"
            style="@style/main_below_item"
            android:text="@string/demotext" />

        <TextView
            android:id="@+id/tv_main_below2"
            style="@style/main_below2_item"
            android:text="@string/demotext2" />
    </LinearLayout>

</LinearLayout>