<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/popuwindow_bg"
    android:orientation="horizontal" >

    <TextView
        android:clickable="true"
        android:paddingLeft="30dp"
        android:id="@+id/tv_app_uninstall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:drawableTop="@drawable/app_manger_img1"
        android:text="@string/tv_app_uninstall2" />

    <TextView
        android:clickable="true"
        android:id="@+id/tv_app_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:drawableTop="@drawable/app_manger_img2"
        android:text="@string/tv_app_start23" />

    <TextView
        android:clickable="true"
        android:id="@+id/tv_app_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:drawableTop="@drawable/app_manger_img3"
        android:text="@string/tv_app_shares" />

    <TextView
        android:clickable="true"
        android:id="@+id/tv_app_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:drawableTop="@drawable/app_manger_img4"
        android:text="@string/tv_app_details" />

</LinearLayout>