<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/_1234556788"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_title_id"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/tv_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publicfuwu"
        android:textColor="#ff0000"
        android:textSize="12sp" />
	<ImageView 
	    android:contentDescription="@string/isdesc"
	    android:paddingRight="25dp"
	    android:paddingTop="15dp"
	    android:id="@+id/iv_delete"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:src="@drawable/selector_delete_blacknum"
	    android:layout_alignParentRight="true"/>
</RelativeLayout>