<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#B6BCCC"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="#8866ff00"
        android:gravity="center"
        android:text="@string/condone"
        android:textColor="#000000"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/cb_protecting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/notpro" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
             android:contentDescription="@string/isdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible" />

        <ImageView
             android:contentDescription="@string/isdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible" />

        <ImageView
             android:contentDescription="@string/isdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible" />

        <ImageView
            android:contentDescription="@string/isdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_online" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageView
             android:contentDescription="@string/isdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/show_cat_4" />

        <Button style="@style/pre_button_style" />

        <Button
            style="@style/next_button_style"
            android:text="@string/alldone" />
    </RelativeLayout>

</LinearLayout>